# Lumina

./: .env.example  .gitignore  API_KEYS.md  App.tsx  CHANGELOG.md  DICTIONARY_MANAGEMENT.md  FloatingApp.tsx  README.md  README_zh.md  floating.html  floating.tsx  index-dev.tsx  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  requirements.txt  tsconfig.json  types.ts  vite.config.ts
components/: AISettings.tsx  AppearanceSettings.tsx  CalibrationModal.tsx  DictionaryDownloadSettings.tsx  DictionarySettings.tsx  EyeToast.tsx  EyeTrackerPanel.tsx  GazeLineHighlight.tsx  JapaneseWordDisplay.tsx  LanguageSettings.tsx  LibraryView.tsx  Reader.tsx  ReadingHeatmap.tsx  TTSControls.tsx  TTSSettings.tsx  TermSidebar.tsx  UpdateSettings.tsx  VocabularyView.tsx
data/: terms.json
scripts/: convert_jsonl_to_sqlite.py  dictionary_download_api.py  enhanced_sanskrit_api.py  extract-test-data.cjs  extract-test-data.py  gaze_follower_api.py  import-to-indexeddb.js  nagisa_api.py  requirements-eyetracking.txt  requirements-tts.txt  run_calibration.py  sandhi_service.py  start_and_test.py  tts_api.py  update-test-data.cjs
server/: index.js  package-lock.json  package.json  sqliteDictionaryService.js  test_api.js  test_braeunte.js  test_fix.js  test_floss.js  test_forms.js  test_haus.js  test_haus_fixed.js  test_multiple.js
services/: apiConfig.ts  browserDictionaryService.ts  dataModels.ts  documentStorage.ts  enhancedSanskritService.ts  epubParser.ts  eyeTrackingService.ts  fileStorage.ts  geminiService.ts  index.ts  japaneseTokenizer.ts  kaikkiService.ts  kookitEpubParser.ts  llmService.ts  localDictionaryService.ts  migrationService.ts  nagisaService.ts  sanskritDictionaryService.ts  sqliteDictionaryService.ts  srsService.ts  storageService.ts  ttsService.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  floating.rs  main.rs  test_dict.rs
src-tauri/src/commands/: dictionary.rs  mod.rs  sanskrit.rs  vocabulary.rs
(+14 files in other folders)
